-
Bug
-
Resolution: Done
-
P2: Important
-
5.11, 5.12.0, 5.12.1, 5.12.2, 5.12.3, 5.12.4, 5.12.5, 5.12.6, 5.13.0, 5.13.1, 5.13.2, 5.14, 5.15
-
-
1a541657562e4a13f0a72a41c51029b6e448460a (qt/qtbase/5.15)
QTabWidget's left and right border are missing when autoFillBackground is set true. Qt 5.12.
I'm currently building on macOS Mojave. Screenshots attached, including comparisons to other Qt versions. On the Qt 5.11.3 screenshot the background is missing completely, but I've reported this as a separate bug.
- is duplicated by
-
QTBUG-68539 [macOS][REG 5.10.1->5.11.0]: When the tabbar is on the south part of a QTabWidget the tabbar is too far down and not overlapping as much as before
-
- Closed
-
| For Gerrit Dashboard: QTBUG-72365 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 267111,5 | QMacStyle: calculate rect for SE_TabWidgetTabContents differently | 5.12 | qt/qtbase | Status: DEFERRED | -1 | 0 |
| 268663,6 | Introduce QAquaNSBox subclass to workaround [NSBox drawRect:] | 5.12 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 289588,3 | WIP: NSBoxGeometryFixer - trick NSBox to render itself correctly | 5.15 | qt/qtbase | Status: ABANDONED | -2 | 0 |
| 289642,3 | QMacStyle: fix NSBox geometry for Aqua theme | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |